# Flipper-Zero-ESP32-Port

./: .gitignore  CMakeLists.txt  README.md  a  buildAndFlash_T-Embed.sh  buildFap.sh  fam_config.py  filesystem.html  hello_fap.fap  interface.html  partitions_singleapp_16mb.csv  partitions_singleapp_4mb.csv  partitions_singleapp_large.csv  proto_pirate.fap  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  winbuild.py
components/archive/: CMakeLists.txt
components/archive/archive/: application.fam
components/archive/archive/helpers/: archive_browser.c  archive_browser.h  archive_favorites.c  archive_files.h
components/archive/archive/scenes/: archive_scene_browser.c
components/flipper_application/: CMakeLists.txt  CMakeLists.txt.xremote-backup-20260623-003420
components/flipper_application/flipper_application/: application_manifest.c  application_manifest.h  firmware_api.c  firmware_api.c.authenticator-backup-20260620-015732  firmware_api.c.before_xremote_input_mode  firmware_api.c.game15-backup  firmware_api.c.xremote-backup-20260622-233309  flipper_application.c  flipper_application.h  nfc_app_api.c
components/flipper_application/flipper_application/api_hashtable/: api_hashtable.h
components/flipper_application/flipper_application/elf/: elf.h  elf_api_interface.h  elf_file.c  elf_file.h
components/flipper_application/flipper_application/plugins/: plugin_manager.c
components/flipper_application/lib/flipper_application/: flipper_application.h
components/furi/: CMakeLists.txt  flipper.c  furi.c  furi.h
components/furi/core/: check.c  check.h  common_defines.h  core_defines.h  critical.c  event_flag.c  event_loop.c  event_loop_tick.c  event_loop_timer.c  furi_config.h  furi_string.c  kernel.c  kernel.h  log.c  memmgr.c  memmgr.h  memmgr_heap.c  memmgr_heap.h  message_queue.c  mutex.c  record.c  semaphore.c  stream_buffer.c  thread.c  thread_list.c  timer.c
components/furi_hal/: CMakeLists.txt  fatfs_compat.c  furi_hal.c  furi_hal.h  furi_hal_bq25896.c  furi_hal_bq25896.h  furi_hal_bq27220.c  furi_hal_bq27220.h  furi_hal_bt.c  furi_hal_bt.h  furi_hal_cortex.c  furi_hal_cortex.h  furi_hal_crypto.c  furi_hal_crypto.h  furi_hal_debug.c  furi_hal_debug.h  furi_hal_display.c  furi_hal_display.h  furi_hal_flash.c  furi_hal_flash.h  furi_hal_gpio.c  furi_hal_gpio.h  furi_hal_info.c  furi_hal_info.h  furi_hal_infrared.c  furi_hal_infrared.h  furi_hal_interrupt.c  furi_hal_interrupt.h  furi_hal_light.c  furi_hal_light.h  furi_hal_memory.c  furi_hal_memory.h  furi_hal_nfc.c  furi_hal_power.c  furi_hal_power.h  furi_hal_random.c  furi_hal_random.h  furi_hal_region.c  furi_hal_region.h  furi_hal_resources.c  (+31 more)
components/furi_hal/boards/: board.h  board_lilygo_t_embed_cc1101.h  board_waveshare_c6_1.47.h  board_waveshare_c6_1.9.h
components/gui/: CMakeLists.txt  application.fam  canvas.c  canvas.h  canvas_i.h  elements.c  elements.h  gui.c  gui.h  gui_i.h  icon.h  icon_animation.c  icon_animation.h  scene_manager.c  scene_manager.h  view.c  view.h  view_dispatcher.c  view_dispatcher.h  view_holder.c  view_holder.h  view_port.c  view_port.h
components/gui/gui/: canvas.h  elements.h  gui.h  gui_i.h  scene_manager.h  view.h  view_dispatcher.h  view_holder.h  view_stack.h
components/gui/gui/modules/: dialog_ex.h  file_browser.h  file_browser_worker.h  loading.h  text_input.h  widget.h
components/gui/modules/: button_menu.c  button_menu.h  button_panel.c  button_panel.h  byte_input.c  byte_input.h  date_time_input.c  date_time_input.h  dialog_ex.c  dialog_ex.h  empty_screen.h  file_browser.c  file_browser.h  file_browser_worker.c  file_browser_worker.h  loading.c  loading.h  menu.c  menu.h  number_input.c  number_input.h  popup.c  popup.h  submenu.c  submenu.h  text_box.c  text_box.h  text_input.c  text_input.h  validators.c  validators.h  variable_item_list.c  variable_item_list.h  widget.h
components/gui/modules/widget_elements/: widget_element.h  widget_element_button.c  widget_element_i.h  widget_element_string_multiline.c  widget_element_text_box.c  widget_element_text_scroll.c
components/infrared/: CMakeLists.txt
components/input/: CMakeLists.txt  application.fam  input.c  input.h
components/lfrfid/: CMakeLists.txt
components/nfc/: CMakeLists.txt  nfc.c  nfc_listener.c  nfc_listener.h  nfc_poller.c  nfc_poller.h  nfc_scanner.c  nfc_scanner.h
components/nfc/helpers/: crypto1.c  iso14443_4_layer.c  nfc_data_generator.c  nfc_data_generator.h  nxp_native_command.c  nxp_native_command.h  nxp_native_command_mode.h
components/nfc/protocols/: nfc_device_defs.c  nfc_generic_event.h  nfc_listener_defs.c  nfc_poller_defs.c  nfc_protocol.c  nfc_protocol.h
components/nfc/protocols/emv/: emv.h  emv_poller.c  emv_poller.h  emv_poller_defs.h  emv_poller_i.c  emv_poller_i.h
components/nfc/protocols/felica/: felica.c  felica.h  felica_i.c  felica_i.h  felica_listener.c  felica_listener.h  felica_listener_defs.h  felica_listener_i.c  felica_listener_i.h  felica_poller.c  felica_poller.h  felica_poller_defs.h  felica_poller_i.c  felica_poller_i.h  felica_poller_sync.c  felica_poller_sync.h
components/nfc/protocols/iso14443_3a/: iso14443_3a.c  iso14443_3a.h  iso14443_3a_device_defs.h  iso14443_3a_listener.c  iso14443_3a_listener.h  iso14443_3a_listener_defs.h  iso14443_3a_listener_i.h  iso14443_3a_poller.c  (+4 more)
components/subghz/: CMakeLists.txt  rpc_system_app_stub.c
components/toolbox/: CMakeLists.txt  api_lock.h  compress.c  compress.h  dir_walk.c  dir_walk.h  float_tools.h  md5_calc.c  name_generator.c  name_generator.h  path.h  pretty_format.h  property.c  property.h  saved_struct.c  saved_struct.h  version.c
components/toolbox/cli/: cli_registry.c
components/toolbox/settings_helpers/: submenu_based.c  submenu_based.h
components/toolbox/stream/: file_stream.c  file_stream.h  stream.c  stream.h  stream_i.h
components/toolbox/toolbox/: api_lock.h  args.h  compress.h  hex.h  md5_calc.h  path.h  pipe.h  saved_struct.h  strint.h
components/u8g2/: CMakeLists.txt  u8g2_buffer.c  u8g2_glue.c  u8g2_glue.h
main/: CMakeLists.txt  app_main.c
(+1003 files in other folders)
