idf_component_register(
    SRCS
        "helpers/crypto1.c"
        "helpers/felica_crc.c"
        "helpers/iso13239_crc.c"
        "helpers/iso14443_4_layer.c"
        "helpers/iso14443_crc.c"
        "helpers/nfc_data_generator.c"
        "helpers/nfc_util.c"
        "helpers/nxp_native_command.c"
        "nfc.c"
        "nfc_device.c"
        "nfc_device_i.c"
        "nfc_listener.c"
        "nfc_poller.c"
        "nfc_scanner.c"
        "protocols/emv/emv.c"
        "protocols/emv/emv_poller.c"
        "protocols/emv/emv_poller_i.c"
        "protocols/felica/felica.c"
        "protocols/felica/felica_i.c"
        "protocols/felica/felica_listener.c"
        "protocols/felica/felica_listener_i.c"
        "protocols/felica/felica_poller.c"
        "protocols/felica/felica_poller_i.c"
        "protocols/felica/felica_poller_sync.c"
        "protocols/iso14443_3a/iso14443_3a.c"
        "protocols/iso14443_3a/iso14443_3a_listener.c"
        "protocols/iso14443_3a/iso14443_3a_listener_i.c"
        "protocols/iso14443_3a/iso14443_3a_poller.c"
        "protocols/iso14443_3a/iso14443_3a_poller_i.c"
        "protocols/iso14443_3a/iso14443_3a_poller_sync.c"
        "protocols/iso14443_3b/iso14443_3b.c"
        "protocols/iso14443_3b/iso14443_3b_poller.c"
        "protocols/iso14443_3b/iso14443_3b_poller_i.c"
        "protocols/iso14443_4a/iso14443_4a.c"
        "protocols/iso14443_4a/iso14443_4a_i.c"
        "protocols/iso14443_4a/iso14443_4a_listener.c"
        "protocols/iso14443_4a/iso14443_4a_listener_i.c"
        "protocols/iso14443_4a/iso14443_4a_poller.c"
        "protocols/iso14443_4a/iso14443_4a_poller_i.c"
        "protocols/iso14443_4b/iso14443_4b.c"
        "protocols/iso14443_4b/iso14443_4b_i.c"
        "protocols/iso14443_4b/iso14443_4b_poller.c"
        "protocols/iso14443_4b/iso14443_4b_poller_i.c"
        "protocols/iso15693_3/iso15693_3.c"
        "protocols/iso15693_3/iso15693_3_i.c"
        "protocols/iso15693_3/iso15693_3_listener.c"
        "protocols/iso15693_3/iso15693_3_listener_i.c"
        "protocols/iso15693_3/iso15693_3_poller.c"
        "protocols/iso15693_3/iso15693_3_poller_i.c"
        "protocols/mf_classic/mf_classic.c"
        "protocols/mf_classic/mf_classic_listener.c"
        "protocols/mf_classic/mf_classic_poller.c"
        "protocols/mf_classic/mf_classic_poller_i.c"
        "protocols/mf_classic/mf_classic_poller_sync.c"
        "protocols/mf_desfire/mf_desfire.c"
        "protocols/mf_desfire/mf_desfire_i.c"
        "protocols/mf_desfire/mf_desfire_poller.c"
        "protocols/mf_desfire/mf_desfire_poller_i.c"
        "protocols/mf_plus/mf_plus.c"
        "protocols/mf_plus/mf_plus_i.c"
        "protocols/mf_plus/mf_plus_poller.c"
        "protocols/mf_plus/mf_plus_poller_i.c"
        "protocols/mf_ultralight/mf_ultralight.c"
        "protocols/mf_ultralight/mf_ultralight_listener.c"
        "protocols/mf_ultralight/mf_ultralight_listener_i.c"
        "protocols/mf_ultralight/mf_ultralight_poller.c"
        "protocols/mf_ultralight/mf_ultralight_poller_i.c"
        "protocols/mf_ultralight/mf_ultralight_poller_sync.c"
        "protocols/nfc_device_defs.c"
        "protocols/nfc_listener_defs.c"
        "protocols/nfc_poller_defs.c"
        "protocols/nfc_protocol.c"
        "protocols/ntag4xx/ntag4xx.c"
        "protocols/ntag4xx/ntag4xx_i.c"
        "protocols/ntag4xx/ntag4xx_poller.c"
        "protocols/ntag4xx/ntag4xx_poller_i.c"
        "protocols/slix/slix.c"
        "protocols/slix/slix_i.c"
        "protocols/slix/slix_listener.c"
        "protocols/slix/slix_listener_i.c"
        "protocols/slix/slix_poller.c"
        "protocols/slix/slix_poller_i.c"
        "protocols/st25tb/st25tb.c"
        "protocols/st25tb/st25tb_poller.c"
        "protocols/st25tb/st25tb_poller_i.c"
        "protocols/st25tb/st25tb_poller_sync.c"
        "protocols/type_4_tag/type_4_tag.c"
        "protocols/type_4_tag/type_4_tag_i.c"
        "protocols/type_4_tag/type_4_tag_listener.c"
        "protocols/type_4_tag/type_4_tag_listener_i.c"
        "protocols/type_4_tag/type_4_tag_poller.c"
        "protocols/type_4_tag/type_4_tag_poller_i.c"
    INCLUDE_DIRS
        "."
        ".."
        "helpers"
        "protocols"
        "protocols/emv"
        "protocols/felica"
        "protocols/iso14443_3a"
        "protocols/iso14443_3b"
        "protocols/iso14443_4a"
        "protocols/iso14443_4b"
        "protocols/iso15693_3"
        "protocols/mf_classic"
        "protocols/mf_desfire"
        "protocols/mf_plus"
        "protocols/mf_ultralight"
        "protocols/ntag4xx"
        "protocols/slix"
        "protocols/st25tb"
        "protocols/type_4_tag"
    REQUIRES furi furi_hal toolbox mlib flipper_format storage bit_lib
    PRIV_REQUIRES mbedtls
)

target_compile_options(${COMPONENT_LIB} PRIVATE
    -Wno-error=implicit-function-declaration
    -Wno-error=unused-parameter
)

# The STM32 build wraps nfc.c in #ifndef FW_CFG_unit_tests.
# We don't use that config, but just in case, ensure it's not defined.
