idf_component_register(
    SRCS
        "version.c"
        "microtar.c"
        "pipe.c"
        "md5_calc.c"
        "hex.c"
        "args.c"
        "dir_walk.c"
        "compress.c"
        "value_index.c"
        "path.c"
        "name_generator.c"
        "strint.c"
        "property.c"
        "saved_struct.c"
        "float_tools.c"
        "manchester_decoder.c"
        "manchester_encoder.c"
        "settings_helpers/submenu_based.c"
        "tar/tar_archive.c"
        "cli/cli_ansi.c"
        "cli/cli_command.c"
        "cli/cli_registry.c"
        "cli/shell/cli_shell.c"
        "cli/shell/cli_shell_completions.c"
        "cli/shell/cli_shell_line.c"
        "stream/stream.c"
        "stream/file_stream.c"
        "stream/string_stream.c"
        "stream/buffered_file_stream.c"
        "stream/stream_cache.c"
        "bit_buffer.c"
        "simple_array.c"
        "keys_dict.c"
        "pretty_format.c"
        "../../lib/toolbox/protocols/protocol_dict.c"
        "../../lib/toolbox/pulse_protocols/pulse_glue.c"
        "../../lib/toolbox/buffer_stream.c"
        "../../lib/toolbox/varint.c"
    INCLUDE_DIRS "." "stream" "../../lib/toolbox/protocols" "../../lib/toolbox/pulse_protocols" "../.."
    REQUIRES mlib furi storage flipper_application loader gui archive mbedtls
    PRIV_REQUIRES heatshrink
)
